--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATABASE_URL="postgresql://postgres.pawcokimgvrppxctimox:Blavatsky001@aws-0-us-e
 # WORKS LOCALLY
 # DATABASE_URL="postgresql://postgres:Blavatsky001@db.pawcokimgvrppxctimox.supabase.co:5432/postgres"
 VITE_TRPC_URL=http://localhost:8888/.netlify/functions/trpc
-APP_URL=https://msw-trpc.netlify.app
+APP_URL=https://trpc-weight-tracker.netlify.app
