--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx prisma generate && tsc -b tsconfig.json netlify/functions/tsconfig.json && vite build",
+    "build": "npx prisma generate && vite build",
     "netlify": "netlify dev",
     "lint": "eslint .",
     "preview": "vite preview",
