--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.131.27",
-    "@testing-library/jest-dom": "^6.8.0",
     "@trpc/client": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
@@ -35,23 +33,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
-    "jsdom": "^26.1.0",
     "lucide-react": "^0.540.0",
-    "prisma": "^6.14.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12",
-    "vitest": "^3.2.4",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@playwright/test": "^1.55.0",
+    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/history": "^1.131.2",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.3.0",
@@ -62,10 +58,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jsdom": "^26.1.0",
     "msw": "^2.10.5",
+    "prisma": "^6.14.0",
+    "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   }
 }
