--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "clsx": "^2.1.1",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
     "lucide-react": "^0.540.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
