--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/client": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
     "@trpc/server": "^11.5.0",
+    "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -35,6 +36,7 @@
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
