chore: testing email

--- a/.env
+++ b/.env
@@ -4,9 +4,13 @@
 #VITE_TRPC_URL=http://localhost:8888/.netlify/functions/trpc
 #APP_URL=http://localhost:5173
 
-DATABASE_URL="postgresql://postgres.pawcokimgvrppxctimox:Blavatsky001@aws-0-us-east-2.pooler.supabase.com:6543/postgres?schema=public&pgbouncer=true"
+# DATABASE_URL="postgresql://postgres.pawcokimgvrppxctimox:Blavatsky001@aws-0-us-east-2.pooler.supabase.com:6543/postgres?schema=public&pgbouncer=true"
 # WORKS LOCALLY
 # DATABASE_URL="postgresql://postgres:Blavatsky001@db.pawcokimgvrppxctimox.supabase.co:5432/postgres"
+
+
+
+DATABASE_URL="postgresql://postgres:Blavatsky001@db.pawcokimgvrppxctimox.supabase.co:5432/postgres"
 VITE_TRPC_URL=http://localhost:8888/.netlify/functions/trpc
 
 EMAIL_HOST=smtp.zeptomail.eu
@@ -14,4 +18,4 @@ EMAIL_PORT=587
 EMAIL_USER=emailappsmtp.2bcee7c87e4c324
 EMAIL_PASS=BDTNGiFyecSh
 EMAIL_FROM="Example Team <noreply@neilhuyton.com>"
-APP_URL=http://localhost:5173
+VITE_APP_URL=http://localhost:5173
