--- a/package.json
+++ b/package.json
@@ -29,18 +29,17 @@
     "@trpc/server": "^11.5.0",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
-    "chart.js": "^4.5.0",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
     "react": "^19.1.1",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
