--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "types": "link:next-themes/dist/types",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
