feat: larger dashboard icons

--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ EMAIL_HOST=smtp.zeptomail.eu
 EMAIL_PORT=587
 EMAIL_USER=emailappsmtp.2bcee7c87e4c324
 EMAIL_PASS=BDTNGiFyecSh
-EMAIL_FROM="Example Team <noreply@neilhuyton.com>"
+EMAIL_FROM="My Weight Mate <noreply@neilhuyton.com>"
