--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
@@ -57,6 +58,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
