--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - develop
-      - "feature/**" # Match feature branches (e.g., feature/login, feature/ui)
+      - "feature/**"  # Match feature branches (e.g., feature/login, feature/ui)
   pull_request:
     branches:
       - main
@@ -22,8 +22,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20" # Match your Node.js version
-          cache: "pnpm"
+          node-version: '20'  # Match your Node.js version
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm@9  # Install specific pnpm version (match your local version)
 
       - name: Install dependencies
         run: pnpm install
@@ -41,14 +44,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "pnpm"
+          node-version: '20'
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm@9  # Match your local pnpm version
 
       - name: Install dependencies
         run: pnpm install
 
       - name: Generate Prisma client
-        run: pnpm build # Runs `npx prisma generate && vite build`
+        run: pnpm build  # Runs `npx prisma generate && vite build`
 
       - name: Run Vitest
         run: pnpm test
@@ -63,8 +69,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "pnpm"
+          node-version: '20'
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm@9  # Match your local pnpm version
 
       - name: Install dependencies
         run: pnpm install
@@ -77,9 +86,11 @@ jobs:
 
       - name: Run Playwright tests
         run: pnpm test:e2e
+        env:
+          VITE_TRPC_URL: 'http://localhost:8888/.netlify/functions/trpc'
 
       - name: Upload Playwright report
-        if: failure() # Upload report on failure for debugging
+        if: failure()  # Upload report on failure for debugging
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
