--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - develop
-      - "feat/**"  # Match feature branches (e.g., feature/login, feature/ui)
+      - "feat/**"  # Match feat branches (e.g., feat/login, feat/ui)
   pull_request:
     branches:
       - main
@@ -19,16 +19,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.19.4'  # Match the exact version from the log
-          cache: 'pnpm'
-
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9.12.2  # Specify exact version (adjust based on your local pnpm --version)
+          version: 9.12.2  # Match your local pnpm version (run `pnpm --version` locally)
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.19.4'  # Match log version
+          cache: 'pnpm'
 
       - name: Debug pnpm installation
         run: |
@@ -50,16 +50,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.12.2
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.4'
           cache: 'pnpm'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.12.2
 
       - name: Debug pnpm installation
         run: |
@@ -86,16 +86,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.12.2
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.4'
           cache: 'pnpm'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.12.2
 
       - name: Debug pnpm installation
         run: |
