--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dom:latest": "link:@testing-library/dom:latest",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
@@ -53,11 +55,10 @@
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/history": "^1.131.2",
-    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.6.1",
+    "@testing-library/dom": "^10.4.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
