--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dom:latest": "link:@testing-library/dom:latest",
     "dropdown-menu": "link:@/components/ui/dropdown-menu",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
@@ -55,10 +56,10 @@
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/history": "^1.131.2",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@testing-library/dom": "^10.4.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
