--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-joyride": "^2.9.3",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
